--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,27 @@
+# Ignore dependencies
+node_modules/
+
+# Ignore environment variables
+.env
+
+# Optional: Ignore lock file if you're not committing it
+# (Not always recommended—see note below)
+package-lock.json
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS / Editor files
+.DS_Store
+.vscode/
+
+# Ignore Terraform files
 .terraform/
 terraform.tfstate
 terraform.tfstate.backup
-*.zip
-.terraform/
+
+# Ignore deployment artifacts
+lambda.zip
+
