--- a/.github/workflow/deploy.yml
+++ b/.github/workflow/deploy.yml
@@ -7,30 +7,41 @@ on:
 
 jobs:
   terraform:
-    name: 'Terraform Apply'
+    name: 'Terraform OIDC Deploy'
     runs-on: ubuntu-latest
 
+    permissions:
+      id-token: write       # Required for OIDC
+      contents: read        # To clone the repo
+
     steps:
-      - name: Checkout code
+      - name: 📥 Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Terraform
+      - name: 🔐 Configure AWS credentials using OIDC
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          role-to-assume: arn:aws:iam::${{secret.AWS_ACCOUNT_ID}}>:role/GitHubOIDCDeploymentRole
+          aws-region: us-west-2
+
+      - name: ⚙️ Set up Terraform
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.8.0
 
-      - name: Terraform Init
+      - name: 🌱 Terraform Init
         run: terraform init
 
-      - name: Terraform Format Check
+      - name: 🧹 Terraform Format Check
         run: terraform fmt -check
 
-      - name: Terraform Plan
+      - name: 🔍 Terraform Validate
+        run: terraform validate
+
+      - name: 📋 Terraform Plan
         run: terraform plan
 
-      - name: Terraform Apply
+      - name: 🚀 Terraform Apply
         run: terraform apply -auto-approve
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: us-west-2
+      - name: 🚀 Terraform Destroy
+        run: terraform apply -auto-approve
