--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,4 +50,4 @@ jobs:
         run: terraform apply -auto-approve
 
       - name: 🚀 Terraform Destroy
-        run: terraform destroy
+        run: terraform destroy -auto-approve
