--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -35,4 +35,5 @@ jobs:
 
       - name: 💣 Terraform Destroy
         run: terraform destroy -auto-approve
-        working-directory: terraform
+        working-directory: .
+
