--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   destroy:
     runs-on: ubuntu-latest
+
     permissions:
       id-token: write
       contents: read
@@ -13,6 +14,11 @@ jobs:
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v3
+
+      - name: 🧳 Zip Lambda source
+        run: |
+          cd lambda
+          zip ../lambda.zip handler.js
 
       - name: 🔐 Configure AWS credentials using OIDC
         uses: aws-actions/configure-aws-credentials@v2
